@@ -1,5 +1,6 @@
 - library:
   o fix installing delta rpms (it never worked before)
+  o fix computing kernel orphans when running kernel is not the latest
 
 Version 7.10 - 17 October 2012, by Thierry Vignaud
 
